# cub3d

./: CMakeLists.txt  Makefile  ceilling_color.c  cub.h  cub3d.h  draw.c  floor_color.c  key_hook.c  main.c  map.cub  map_inic.c  map_parc.c  map_valid.c  new_draw.c  ray_and_draw.c  ray_and_draw_2.c  resol_utils.c  screenshot.c  spr_draw.c  spr_sort.c  textures.c  textures_2.c  utils.c  valid_color.c
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
libft/: Makefile  ft_lstadd_back.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_strchr.c  ft_strjoin.c  ft_strlen.c  libft.h
minilibx_mms/: mlx.c
textures/: redbrick.xpm
